@@ -193,6 +193,8 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Fix soapy insanity (closes: #422062)
     - Add script to split index.db by severities (closes: #422062)
     - Add bugspam.cgi with confirm string (closes: #348225)
+    - Allow selecting both archived and unarchived bugs (closes: #320175)
+    - Support intersecting sets of bugs (closes: #164421)
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
